--- a/src/Modules/UdaStore.Module.Catalog/UdaStore.Module.Catalog.csproj
+++ b/src/Modules/UdaStore.Module.Catalog/UdaStore.Module.Catalog.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\Infrastructure\UdaStore.Infrastructure\UdaStore.Infrastructure.csproj" />
     <ProjectReference Include="..\UdaStore.Module.Core\UdaStore.Module.Core.csproj" />
   </ItemGroup>
