--- a/src/UdaStore.WebApp/UdaStore.WebApp.csproj
+++ b/src/UdaStore.WebApp/UdaStore.WebApp.csproj
@@ -8,6 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Autofac" Version="4.6.2" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
+    <PackageReference Include="MediatR" Version="3.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.0" />
@@ -24,6 +27,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Modules\UdaStore.Module.Catalog\UdaStore.Module.Catalog.csproj" />
     <ProjectReference Include="..\Modules\UdaStore.Module.Core\UdaStore.Module.Core.csproj" />
   </ItemGroup>
 
