--- a/src/UdaStore.Web/UdaStore.Web.csproj
+++ b/src/UdaStore.Web/UdaStore.Web.csproj
@@ -13,6 +13,11 @@
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.1.0" />
     <PackageReference Include="MediatR" Version="3.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.EntityFrameworkCore.Tools.DotNet" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
@@ -2321,6 +2326,8 @@
   <ItemGroup>
     <ProjectReference Include="..\Infrastructure\UdaStore.Infrastructure\UdaStore.Infrastructure.csproj" />
     <ProjectReference Include="..\Modules\UdaStore.Module.Catalog\UdaStore.Module.Catalog.csproj" />
+    <ProjectReference Include="..\Modules\UdaStore.Module.Orders\UdaStore.Module.Orders.csproj" />
+    <ProjectReference Include="..\Modules\UdaStore.Module.Reviews\UdaStore.Module.Reviews.csproj" />
   </ItemGroup>
 
   <Target Name="DebugRunWebpack" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('wwwroot\dist') ">
