--- a/src/UdaStore.Web/appsettings.json
+++ b/src/UdaStore.Web/appsettings.json
@@ -1,6 +1,18 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=UdaStore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=UdaStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "PhotoSettings": {
+    "MaxBytes": 10485760,
+    "AcceptedFileTypes": [
+      ".png", ".jpg", ".jpeg"
+    ]
+  },
+  "FileSettings": {
+    "MaxBytes": 10485760,
+    "AcceptedFileTypes": [
+      ".pdf", ".docx"
+    ]
   },
   "Logging": {
     "IncludeScopes": false,
