#product single file

--- a/src/UdaStore.Web/package.json
+++ b/src/UdaStore.Web/package.json
@@ -17,10 +17,12 @@
     "@angular/platform-browser-dynamic": "4.2.5",
     "@angular/platform-server": "4.2.5",
     "@angular/router": "4.2.5",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
     "@ngtools/webpack": "1.5.0",
     "@types/webpack-env": "1.13.0",
     "angular-4-data-table": "^0.2.3",
     "angular-4-data-table-bootstrap-4": "^0.2.0",
+    "angular-froala-wysiwyg": "^2.7.1",
     "angular2-template-loader": "0.6.2",
     "aspnet-prerendering": "^3.0.1",
     "aspnet-webpack": "^2.0.1",
@@ -38,7 +40,9 @@
     "isomorphic-fetch": "2.2.1",
     "jquery": "3.2.1",
     "json-loader": "0.5.4",
+    "ng-pick-datetime": "^5.0.0-beta.11",
     "ng2-toasty": "^4.0.3",
+    "ngx-chips": "^1.5.10",
     "ngx-uploader": "^4.0.2",
     "preboot": "4.5.2",
     "raw-loader": "0.5.1",
