#auth:1 - building secure api, refactor get data in components.

--- a/src/UdaStore.Web/appsettings.json
+++ b/src/UdaStore.Web/appsettings.json
@@ -1,12 +1,15 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=UdaStoreDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=UdaStoreDbAuth;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "PhotoSettings": {
     "MaxBytes": 10485760,
     "AcceptedFileTypes": [
       ".png", ".jpg", ".jpeg"
     ]
+  },
+  "JwtBearerAppsetting": {
+    "Secret": "UDASTORE USING ASP.NET CORE AND ANGULAR"
   },
   "FileSettings": {
     "MaxBytes": 10485760,
